cleanup, dependencies updated

--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
-  "name": "promise-timeout",
+  "name": "@hn3000/promise-timeout",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "simple timed promises",
+  "keywords": [ "promise", "promises", "timeout" ],
+  "main": "out/src/index.js",
+  "types": "out/src/index.d.ts",
   "scripts": {
     "prepare": "tsc --build --force tsconfig.test.json",
+    "pretest": "tsc --build --force tsconfig.test.json",
     "test": "mocha out/test/allTests.js",
     "cover": "nyc npm test"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/chai-as-promised": "^7.1.2",
-    "chai-as-promised": "^7.1.1"
+  "author": "Harald Niesche",
+  "repository": {
+    "github": "https://github.com/hn3000/promise-timeout"
   },
+  "license": "ISC",
+  "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.2.6",
+    "@types/chai-as-promised": "^7.1.2",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
-    "mocha": "^6.2.2",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^8.0.1",
     "nyc": "^14.1.1",
-    "typescript": "^3.7.2"
+    "typescript": "^3.9.7"
   },
+  "files": [
+    "out/src/**/*.js",
+    "out/src/**/*.d.ts"
+  ],
   "nyc": {
     "all": false,
     "sourceMap": true,
@@ -41,7 +49,8 @@
     ],
     "reporter": [
       "text",
-      "html"
+      "html",
+      "lcov"
     ]
   }
 }
